Actividad: Filtrar productos. Finalizada

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,16 +1,17 @@
 {
     "cSpell.words": [
+        "AFIP",
         "Allevar",
         "asignale",
         "Asumar",
+        "diacrítico",
         "facilitador",
         "imprímelos",
+        "Lightspeed",
+        "Macbook",
         "onsale",
         "programalo",
         "reutilizable",
-        "spliteada",
-        "Macbook",
-        "AFIP",
-        "Lightspeed"
+        "spliteada"
     ]
 }
