Actividad: Capturar el id del producto. Finalizada

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "Allevar",
         "asignale",
         "Asumar",
+        "conectalo",
         "diacrítico",
         "facilitador",
         "imprímelos",
